Patient can choose his Dentist when he/she registers.

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -806,6 +806,8 @@
     <Content Include="Views\MedicalRecords\Edit.cshtml" />
     <Content Include="Views\MedicalRecords\Index.cshtml" />
     <Content Include="Views\Patient\MyTeeth.cshtml" />
+    <Content Include="Views\Patient\PickDentist.cshtml" />
+    <Content Include="Views\Patient\SeeDentistProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
