Dentist is able to insert Description and Bill for specific Patient. That Medical Record can be seen in patient profile. View for MyPatient is improved with CSS

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -807,6 +807,7 @@
     <Content Include="Views\Patient\MyTeeth.cshtml" />
     <Content Include="Views\Patient\PickDentist.cshtml" />
     <Content Include="Views\Patient\SeeDentistProfile.cshtml" />
+    <Content Include="Views\Dentist\MedicalRecord.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
