Dentist can change ToothState. Some custom css added for Choosing Dentist and MEdicalHistory for Patient (partially finished)

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -834,6 +834,7 @@
     <Folder Include="Scripts\kendo\cultures\" />
     <Folder Include="Scripts\kendo\messages\" />
     <Folder Include="Views\Base\" />
+    <Folder Include="Views\PatientProfileViewModel\" />
     <Folder Include="Views\Scheduler\" />
   </ItemGroup>
   <ItemGroup>
