1) Custom view for all medical record fixed. 2)When you hover over some "tooth", a hand appears and you can click on some tooth and opet description just for that tooth.

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -823,6 +823,7 @@
     <Content Include="Views\Patient\SeeDentistProfile.cshtml" />
     <Content Include="Views\Dentist\MedicalRecord.cshtml" />
     <Content Include="Views\Dentist\ListAllMedicalRecords.cshtml" />
+    <Content Include="Views\Dentist\ToothMedicalRecord.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
