Forgotten Picture for No teeth, Made view for Drafts and Notes for patient. Teeth not moving any mre to the left

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -825,6 +825,8 @@
     <Content Include="Views\Dentist\MedicalRecord.cshtml" />
     <Content Include="Views\Dentist\ListAllMedicalRecords.cshtml" />
     <Content Include="Views\Dentist\ToothMedicalRecord.cshtml" />
+    <Content Include="Views\Patient\Draft.cshtml" />
+    <Content Include="Views\Patient\Notes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
