--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -815,7 +815,8 @@
     <Content Include="Views\Patient\Notes.cshtml" />
     <Content Include="Views\Dentist\Requests.cshtml" />
     <Content Include="Views\Home\ListAllUpdates.cshtml" />
-    <Content Include="Views\Dentist\MyAppointments.cshtml" />
+    <Content Include="Views\Admin\Updates.cshtml" />
+    <Content Include="Views\Admin\EditUpdates.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
